tests/resources/errors/errors3.ac
import std;
import std.Error;

fn write_val(val: int) {

#if OS_GROUP_WINDOWS
    handle: void* = std.GetStdHandle(-11);
    written: uint32;
    c: char = as(char) val;
    std.WriteFile(handle, &c, 1, &written, null);
#elif OS_GROUP_UNIX
    c: char = as(char) val;
    std.write(1, &c, 1);
#endif

}

struct TestError :: *Error {
    const fn get_name() -> const char* {
        return "TestError";
    }
    const fn get_message() -> const char* {
        return "error raised!";
    }
}

fn foo(cond: bool) -> int | raises TestError {
    if (cond) {
        return 64;
    }

    raise TestError{};
}

fn main() {
    value: int = try (foo(true));
    write_val(value);
    try (foo(false));
}
